--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/exercise-15/style.css">
     <link rel="icon" href="https://img.freepik.com/free-vector/digital-indian-currency-background-with-rupee-symbol_1017-41092.jpg">
     <script src="currency.js" defer></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container-fluid">
