--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/exercise-15/style.css">
     <link rel="icon" href="https://img.freepik.com/free-vector/digital-indian-currency-background-with-rupee-symbol_1017-41092.jpg">
-    <script src="currency.js" defer></script>
+    <script src="./currency.js" defer></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
